<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shape"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="REGISTRATION"
            android:layout_marginTop="150dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <EditText
            android:id="@+id/ed1"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"

            android:background="@drawable/input_style"
            android:hint="Enter fullname"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1"
            />
        <EditText
            android:id="@+id/ed2"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/input_style"
            android:hint="Enter username"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed1"
            />
        <EditText
            android:id="@+id/ed3"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/input_style"
            android:hint="Enter passowrd"
            android:inputType="textPassword"
            android:drawableRight="@drawable/ic_baseline_visibility_24"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:longClickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed2"
            />
        <Button
            android:id="@+id/btn_rigis"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="Register"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed3"
            />
        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <LinearLayout
            android:id="@+id/lin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_rigis"
            android:gravity="center"
            android:orientation="horizontal"
            >
        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already Registered? "
            android:textColor="@color/teal_200"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Click here"
            android:textStyle="bold"
            android:textColor="@color/teal_200"
            android:textSize="16dp"
            />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>